<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.ForgetPasswordActivity">

    <RelativeLayout
        android:id="@+id/relative1234"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:id="@+id/page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" />


    </RelativeLayout>


    <EditText
        android:id="@+id/find_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_enter_your_phone_number"
        android:background="@drawable/input_design"
        android:padding="14dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/relative1234"
        />

    <TextView
        android:id="@+id/title_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_phone_number"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/answer_the_following_security_questions"
        android:textSize="25dp"
        />


    <EditText
        android:id="@+id/question_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/where_is_your_parent_met"
        android:background="@drawable/input_design"
        android:padding="14dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/title_questions"
        />


    <EditText
        android:id="@+id/question_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_hero"
        android:background="@drawable/input_design"
        android:padding="14dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/question_1"
        />

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@drawable/buttons"
        android:padding="14dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/question_2"
        />

</RelativeLayout>