<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/close_settingsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/update_settings_Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:layout_marginRight="13dp"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/app_bar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile"
        />

    <TextView
        android:id="@+id/profile_image_change_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_profile_image"
        android:text="@string/change_profile"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginTop="4dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image_change_Btn"
        android:layout_margin="15dp"
        android:hint="@string/phone_number"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_phone_number"
        android:layout_margin="15dp"
        android:hint="@string/user_name"
        android:padding="10dp"
        />


    <EditText
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_full_name"
        android:layout_margin="15dp"
        android:hint="@string/address_city"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/security_question_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_address"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="15dp"
        android:text="@string/security_question"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:padding="10dp"
        />


</RelativeLayout>