<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/order_phone_number"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginRight="5dp"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/order_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_below="@+id/order_phone_number"
            android:gravity="center"
            android:layout_marginTop="10dp"
            
            />

    </RelativeLayout>




</androidx.cardview.widget.CardView>