<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.CartActivity">

    <RelativeLayout
        android:id="@+id/r6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:id="@+id/page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" />


    </RelativeLayout>
    
    <TextView
        android:id="@+id/msg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:text="@string/congratulation_your_final_order_has_been_placed_successfully_soon_it_will_be_verified"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:visibility="gone"
        android:gravity="center_horizontal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/r6"
        android:padding="5dp"
        android:layout_above="@+id/next_process_btn"

        />


    <Button
        android:id="@+id/next_process_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="30dp"
        android:background="@drawable/buttons"
        />

</RelativeLayout>